# Quartz

./: .gitignore  PORT_NEW_IMPLEMENTATION_GUIDE.md  PORT_OPTIMIZATION_PLAN.md  README.md  electron-main.js  installer.nsh  package-lock.json  package.json  preload.js  skin0.py
native/quartz_cli/: Cargo.toml
native/quartz_cli/src/: hashes.rs  main.rs  utils.rs
native/quartz_cli/src/commands/: batch_split_vfx.rs  bin_hashes.rs  combine_linked.rs  mod.rs  noskinlite.rs  pyntex.rs  ritobin_dir.rs  separate_vfx.rs  texture.rs  to_bin.rs  to_py.rs  wad.rs
native/quartz_cli/target_verify/: .rustc_info.json
native/quartz_cli/target_verify/debug/.fingerprint/bytecount-c629f00cd7f1621b/: lib-bytecount  lib-bytecount.json
native/quartz_cli/target_verify/debug/.fingerprint/byteorder-cd1dbd536d944254/: lib-byteorder  lib-byteorder.json
native/quartz_cli/target_verify/debug/.fingerprint/cfg-if-7226893fe2365613/: lib-cfg_if  lib-cfg_if.json
native/quartz_cli/target_verify/debug/.fingerprint/equivalent-92f1c000624f2a51/: lib-equivalent  lib-equivalent.json
native/quartz_cli/target_verify/debug/.fingerprint/glam-217ea31eaa5f4d51/: lib-glam  lib-glam.json
native/quartz_cli/target_verify/debug/.fingerprint/hashbrown-8691d89b69803580/: lib-hashbrown  lib-hashbrown.json
native/quartz_cli/target_verify/debug/.fingerprint/indexmap-78ea6f0879071057/: lib-indexmap  lib-indexmap.json
native/quartz_cli/target_verify/debug/.fingerprint/itoa-479688f6d642518e/: lib-itoa  lib-itoa.json
native/quartz_cli/target_verify/debug/.fingerprint/log-11565696133ecd00/: lib-log  lib-log.json
native/quartz_cli/target_verify/debug/.fingerprint/ltk_hash-779f7ee9d7e21acb/: lib-ltk_hash  lib-ltk_hash.json
native/quartz_cli/target_verify/debug/.fingerprint/memchr-c499cb23948783a5/: lib-memchr  lib-memchr.json
native/quartz_cli/target_verify/debug/.fingerprint/minimal-lexical-c9f3b276a403628d/: lib-minimal_lexical  lib-minimal_lexical.json
native/quartz_cli/target_verify/debug/.fingerprint/nom-bb3d174b6664281d/: lib-nom  lib-nom.json
native/quartz_cli/target_verify/debug/.fingerprint/once_cell-778dc81b17f83da7/: lib-once_cell
native/quartz_cli/target_verify/debug/.fingerprint/paste-2e9018f20b34b5ee/: build-script-build-script-build
native/quartz_cli/target_verify/debug/.fingerprint/paste-62461bab86b99aa9/: output-lib-paste
native/quartz_cli/target_verify2/debug/.fingerprint/log-5a9119114236f0fa/: lib-log  (+1 more)
native/wad_indexer/: Cargo.toml  build.rs  package-lock.json  package.json  test_task.rs
native/wad_indexer/src/: lib.rs
(+744 files in other folders)
